# random_stuff

./: README.md  binary_tex_converter.c  cryptsetup.c  hex_to_C_string_converter.cpp  owned.c  random.cpp  xxx.c  zuluCrypt.patch
cryfs_api/: CMakeLists.txt
cryfs_api/src/: cryfs_api.c  cryfs_api.h  test_api.c
fileServer/: CMakeLists.txt  fileServer.pro  fileserver.cpp  fileserver.h  icons.qrc  main.cpp  statusicon.cpp  statusicon.h  tray_application_type.h
flashDownloader/: flashDownloader.pro  flashDownloader.pro.user.3.3-pre1  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
veracrypt_benchmark/: README  cryptsetup_veracrypt.benchmark  veracrypt.benchmark
veracrypt_benchmark/src/: benchmark.cpp  benchmark.h  benchmark.pro  main.cpp  task.h
